--- a/Xsis.Web/Views/Keluarga/_Edit.cshtml
+++ b/Xsis.Web/Views/Keluarga/_Edit.cshtml
@@ -16,6 +16,10 @@
         .blueborder.invalid {
             border-color: red;
         }
+        .input-container {
+  display: flex;
+  width: 100%;
+  margin-bottom: 15px;
 </style>
 
 <form action="" method="post" id="idFrmEditKeluarga">
@@ -70,7 +74,10 @@
             </td>
             <td colspan="1">
                 <label>Tgl. Lahir</label>
-                <input type="text" name="dob" class="form-control blueborder" id="idDob">
+                <div class="input-container">
+                    <input type="text" name="dob" class="form-control blueborder" id="idDob" style="border-top-right-radius:0px; border-bottom-right-radius:0px; border-right:none;">
+                    <span class="input-group-addon blueborder" autocomplete="off" style="background-color: transparent; padding: 6px 20px;"><i class="glyphicon glyphicon-calendar" style="font-size: 18px; color:#000080;"></i></span>
+                </div>
             </td>
         </tr>
         <tr>
@@ -159,10 +166,6 @@
         var vSelectGender =
             { "false": "Perempuan", "true": "Laki-laki" };
 
-        //$("#idDob").datepicker({ //datepicker
-        //    dateFormat: "yy-mm-dd"
-        //});
-
         $.ajax({
             url: '/Keluarga/AmbilData',
             data: { ID: $('#idget').val() },
@@ -174,7 +177,7 @@
                 var vMonthList = { 1: 'Jan', 2: 'Feb', 3: 'Mar', 4: 'Apr', 5: 'Mei', 6: 'Jun', 7: 'Jul', 8: 'Agu', 9: 'Sep', 10: 'Okt', 11: 'Nov', 12: 'Des' };
                 vtahun = a.getFullYear();
                 vDataDob = vtahun + "-" + vbulan + "-" + vtanggal;
-                $("#idDob").datepicker({ //datepicker
+                $("#idDob").datepicker({
                     dateFormat: "yy-mm-dd"
                 }).datepicker("setDate", vDataDob);
                 debugger;
@@ -187,36 +190,62 @@
                 $('#idJob').val(mdl.job);
                 $('#idNotes').val(mdl.notes);
             }
-        });
-
-        $('#idFamilyFamilyTreeType').selected(function () {
+        });    
+    
+        $('#idFamilyTreeType').change(function () {
+            var vTreeType = $('#idFamilyTreeType').val();
             var vSelectFamilyRelation = "";
             $.ajax({
                 url: '/Keluarga/SelectFamilyRelation',
                 method: 'Get',
                 success: function (mdl) {
                     debugger;
-                    $.each(mdl, function (i, d) {
-                        vSelectFamilyRelation = vSelectFamilyRelation +
-                            '<option value="' + d.id + '">' +
-                                d.name +
-                                '</option>';
+
+                    $.each(mdl, function (i, d) { //menjahit data ke dalam tabel
+                        if (d.family_tree_type_id == vTreeType) {
+                            debugger;
+                            vSelectFamilyRelation = vSelectFamilyRelation +
+                                '<option value="' + d.id + '">' +
+                                    d.name +
+                                    '</option>';
+                        }
                     });
+                    $('#idFamilyRelation').empty();
                     $('#idFamilyRelation').append(vSelectFamilyRelation);
+
+                    vSelectGender = '<option value="true">Laki-laki</option>';
+                    $('#idGender').empty();
+                    $('#idGender').append(vSelectGender);
                 }
             });
-        });        
-    });
+        });
 
-    $('.ClBtnCloseKeluarga').click(function () {
-        debugger;
-        $('#idMdlEditKeluarga').close;
-        location.reload();
-    });
+        $('#idFamilyRelation').change(function () {
+            if ($('#idFamilyRelation').val() == 1 || $('#idFamilyRelation').val() == 3) {
+                vSelectGender = '<option value="true">Laki-laki</option>';
+            }
+            else if ($('#idFamilyRelation').val() == 2 || $('#idFamilyRelation').val() == 5) {
+                vSelectGender = '<option value="perempuan">Perempuan</option>';
+            }
+            else {
+                vSelectGender = '<option value="true">Laki-laki</option>' +
+                '<option value="false">Perempuan</option>';
+            }
 
-    $('#idBtnCancelKeluarga').click(function () {
-        $('#idMdlEditKeluarga').close;
-        location.reload();
+            $('#idGender').empty();
+            $('#idGender').append(vSelectGender);
+        });
+
+        $('.ClBtnCloseKeluarga').click(function () {
+            debugger;
+            $('#idMdlEditKeluarga').close;
+            location.reload();
+        });
+
+        $('#idBtnCancelKeluarga').click(function () {
+            $('#idMdlEditKeluarga').close;
+            location.reload();
+        });
     });
 
      function updatekeluarga(){
